--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -4,16 +4,9 @@
   become: true
   tasks:
 
-  - name: update repository index
-    apt:
-      update_cache: yes
-
   - name: Remove Apache web server
     apt:
-      name: apache2
-      state: absent
-
-  - name: Remove php support for apache
-    apt:
-      name: libapache2-mod-php
+      name:
+          - apache2
+          - libapache2-mod-php
       state: absent
