--- a/install_apache.yml
+++ b/install_apache.yml
@@ -2,12 +2,22 @@
 
 - hosts: all
   become: true
-  tasks:
+  tasks: 
 
-  - name: Installing Apache and php Support
-    package:
+  - name: install apache and php for Ubuntu servers
+    apt: 
       name:
-          - "{{ apache_package }}"
-          - "{{ php_package }}"
+        - apache2
+        - libapache2-mod-php
       state: latest
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: install apache and php for Cent OS servers
+    dnf:
+      name:
+        - httpd
+        - php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
