--- a/site.yml
+++ b/site.yml
@@ -4,12 +4,14 @@
    pre_tasks:
  
    - name: install updates (CentOS)
+     tags: always
      yum:
        update_only: yes
        update_cache: yes
      when: ansible_distribution == "CentOS"
  
    - name: install updates (Ubuntu)
+     tags: always
      apt:
        upgrade: dist
        update_cache: yes
@@ -21,6 +23,7 @@
    tasks:
  
    - name: install httpd package (CentOS)
+     tags: apache,centos,httpd
      yum:
        name:
          - httpd
@@ -29,6 +32,7 @@
      when: ansible_distribution == "CentOS"
  
    - name: install apache2 package (Ubuntu)
+     tags: apache,apache2,ubuntu
      apt:
        name:
          - apache2
@@ -41,22 +45,26 @@
    tasks:
  
    - name: install httpd package (CentOS)
+     tags: centos,db,mariadb
      yum:
        name: mariadb
        state: latest
      when: ansible_distribution == "CentOS"
  
    - name: install mariadb server
+     tags: db,mariadb,ubuntu
      apt:
        name: mariadb-server
        state: latest
      when: ansible_distribution == "Ubuntu"
 
  - hosts: file_servers
+   tags: samba
    become: true
    tasks: 
 
    - name: install samba package
+     tags: samba
      package:
        name: samba
        state: latest
