--- a/site.yml
+++ b/site.yml
@@ -16,8 +16,24 @@
        upgrade: dist
        update_cache: yes
      when: ansible_distribution == "Ubuntu"
- 
- 
+
+ - hosts: workstations
+   become: true
+   tasks:
+
+   - name: install unzip
+     package:
+       name: unzip
+
+   - name: install terraform
+     unarchive:
+       src: https://releases.hashicorp.com/terraform/1.3.7/terraform_1.3.7_linux_amd64.zip
+       dest: /usr/local/bin
+       remote_src: yes
+       mode: 0755
+       owner: root
+       group: root
+
  - hosts: web_servers
    become: true
    tasks:
@@ -30,6 +46,13 @@
          - php
        state: latest
      when: ansible_distribution == "CentOS"
+   - name: start httpd (CentOS)
+     tags: apache,centos,httpd
+     service: 
+       name: httpd
+       state: started
+       enabled: yes
+     when: ansible_distribution == "CentOS"
  
    - name: install apache2 package (Ubuntu)
      tags: apache,apache2,ubuntu
@@ -39,6 +62,31 @@
          - libapache2-mod-php
        state: latest
      when: ansible_distribution == "Ubuntu"
+   
+   - name: change e-mail address for admin
+     tags: apache,centos,httpd
+     lineinfile:
+      path: /etc/httpd/conf/httpd.conf
+      regexp: '^ServerAdmin'
+      line: ServerAdmin somebody@somewhere.net
+     when: ansible_distribution == "CentOS"
+     register: httpd
+   
+   - name: restart httpd (CentOS)
+     tags: apache,centos,httpd
+     service:
+       name: httpd
+       state: restarted
+     when: httpd.changed
+
+   - name: copy default html file for site
+     tags: apache,apache2,httpd
+     copy:
+       src: default_site.html
+       dest: /var/www/html/index.html
+       owner: root
+       group: root
+       mode: 0644
  
  - hosts: db_servers
    become: true
