added-iptables-nft-for-docker

--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -12,6 +12,7 @@
     name: 
       - nftables
       - fail2ban
+      - iptables-nft
     state: latest
 
 ## https://wiki.archlinux.org/title/nftables
