--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -3,12 +3,15 @@
   apt:
     name: 
       - fail2ban
+      - netfilter-persistent
+      - iptables-persistent
     state: latest
 
 ## https://wiki.archlinux.org/title/nftables
 - name: nftables default setup
   tags: baseline-security
   shell: |
+  #Change this to point to file
     iptables -F
     iptables -X
     iptables -Z
@@ -20,9 +23,9 @@
     netfilter-persistent save
     
 
-- name: fail2ban default setup
-  tags: baseline-security
-  shell: |
+# - name: fail2ban default setup
+  # tags: baseline-security
+  # shell: |
 
 - name: Docker Repository Setup (Install Packages)
   tags: docker
